# o2

./: .gitignore  .origen_dev_workspace  .travis.yml  LICENSE  README.md
example/: .gitignore  console.py  pyproject.toml
example/app/blocks/dut/: model.py
example/app/lib/example/: application.py  (+1 more)
example/approved/V93K_SMT7/: captures.avc  timeset_workout.avc  toggle.avc
example/config/: application.toml  boot.py  commands.toml  origen.toml  version.toml
example/example/: application.py
example/example/commands/: example.py  examples.py
example/example/flows/: wt1.py
example/example/interface/: interface.py
example/example/patterns/: clk.py  empty.py  looped_produce_pattern.py  pat1.py  startup.py  timeset_workout.py  toggle.py
example/lib/: example.py
example/targets/: dut.py  eagle.py  eagle_with_simulator.py  eagle_with_st7.py  falcon.py
example/targets/dut/: eagle.py  falcon.py
example/targets/tester/: j750.py  sim.py  uflex.py  v93k_st7.py
example/tests/: block_loader_test.py  cli_test.py  compiler_test.py  errors_test.py  o1_reg_test.py  pin_api_test.py  registers_test.py  sub_blocks_test.py  test_example.py  tester_test.py  timing_test.py  translator_test.py
example/tests/pins/: test_pin_api_basics.py  test_pin_collecting.py  test_pin_containers.py  test_pin_grouping.py  test_pin_headers.py
example/tests/shared/: __init__.py  python_like_apis.py
example/web/source/: conf.py  index.rst
python/: README.md  poetry_build.py  pyproject.toml
python/config/: application.toml  origen.toml
python/core/: application.py
python/origen/: __init__.py  application.py  boot.py  callbacks.py  compiler.py  controller.py  errors.py  interface.py  pins.py  poetry_build.py  producer.py  pyproject.toml  registers.py  services.py  sub_blocks.py  target.py  tester.py  timesets.py  translator.py
python/origen/__bin__/: __init__.py
python/origen/application/: base.py
python/origen/blocks/: __init__.py  memories.py
python/origen/build_helpers/: __init__.py
python/origen/config/: application.toml  origen.toml
python/origen/core/: application.py
python/origen/generator/: processor.py  tester_api.py
python/origen/helpers/: __init__.py  num.py
python/origen/model/: model_mixin.py  top_level.py  top_level_mixin.py
python/origen/origen/: __init__.py  application.py  attributes.py  boot.py  compiler.py  errors.py  interface.py  producer.py  target.py  tester.py  translator.py  unit_helpers.py
python/origen/registers/: actions.py  loader.py
python/origen/translators/: ip_xact.py
python/origen/utility/: __init__.py  mailer.py  results.py
python/origen/web/: __init__.py
python/origen_metal/: .gitignore  README.md  interactive.py  poetry_build.py  pyproject.toml  setup.py
python/origen_metal/origen_metal/: __init__.py
python/origen_metal/tests/: README.md  __init__.py  conftest.py  test_differ.py  test_file_permissions.py  test_frontend.py  test_origen_metal.py  test_revision_control.py
python/rustdoc/: __init__.py
python/templates/: dut_info.txt  dut_info.txt.mako
python/tests/: test_origen.py
python/web/source/: _common_defs.rst  community.rst  conf.py  index.rst
rust/origen/: Cargo.toml  README.md  build.rs  origen.toml
rust/origen/cli/: Cargo.toml  build.rs
rust/origen/meta/: Cargo.toml
rust/origen/origen-core-support/: Cargo.toml  README.md
rust/origen/pyapi/: Cargo.toml
rust/origen/src/: README.md  ast.rs  bin.rs  error.rs  lib.rs  macros.rs  services.rs
rust/origen_metal/: Cargo.toml  build.rs
rust/origen_metal/.github/: copilot-instructions.md
rust/origen_metal/src/: error.rs  file_utils.rs  frontend.rs  lib.rs  logger.rs  macros.rs
rust/pyapi/: Cargo.toml
rust/pyapi/src/: address_block.rs  application.rs  current_command.rs  dut.rs  extensions.rs  file_handler.rs  interface.rs  lib.rs  logger.rs  macros.rs  memory_map.rs  model.rs  pins.rs  plugins.rs  producer.rs  registers.rs  services.rs  tester.rs  timesets.rs  user.rs
rust/pyapi_metal/: Cargo.toml  origen_metal  pyproject.toml
rust/pyapi_metal/src/: lib.rs
test_apps/no_workspace/templates/: pyproject.toml
test_apps/no_workspace/user_install/: pyproject.toml
test_apps/pl_ext_cmds/: pyproject.toml
test_apps/pl_ext_cmds/config/: application.toml
test_apps/pl_ext_cmds/pl_ext_cmds/: commands.toml
test_apps/python_app/: .gitignore  README.md  pyproject.toml  smt8_flow.txt
test_apps/python_app/approved/: referenced.list
test_apps/python_app/config/: application.toml  commands.toml  enumerated_plugins.toml  origen.toml
test_apps/python_app/example/: application.py
test_apps/python_app/targets/: eagle_with_simulator.py  eagle_with_smt7.py  readme.md
test_apps/python_app/templates/: dut_info.txt.mako
test_apps/python_app/tests/: __init__.py  app_invocation_test.py  ast_processor_test.py  block_loader_test.py  callbacks_test.py  cli_test.py  compiler_test.py  configs_test.py  conftest.py  errors_test.py  metal_integration_test.py  o1_reg_test.py  pin_api_test.py  plugin_test.py  registers_test.py  sub_blocks_test.py  target_test.py  test_callbacks.py  test_ids_test.py  tester_test.py  timing_test.py  translator_test.py  version_test.py
test_apps/python_no_app/: README.md  origen.toml  pyproject.toml
test_apps/python_no_app/tests/: __init__.py  misc_test.py  shared.py  test_cli.py  test_cmd_building.py  test_cmd_exts.py  test_configs.py  test_current_command.py  test_global_invocation.py  test_plugin_loading.py
test_apps/python_plugin/: .gitignore  pyproject.toml
test_apps/python_plugin/config/: application.toml
test_apps/python_plugin/python_plugin/: application.py  commands.toml
test_apps/python_plugin_no_cmds/: pyproject.toml
test_apps/python_plugin_no_cmds/config/: application.toml
test_apps/python_plugin_the_second/: pyproject.toml
test_apps/python_plugin_the_second/config/: application.toml  origen.toml
test_apps/python_plugin_the_second/python_plugin_the_second/: commands.toml
test_apps/test_apps_shared_test_helpers/: pyproject.toml
test_apps/test_apps_shared_test_helpers/config/: application.toml
(+1221 files in other folders)
