[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Stephen McGinty <stephen.f.mcginty@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
origen = { path = "/home/stephen/Code/github/reboot/python" }

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
