[tool.poetry]
name = "origen"
version = "2.0.0-pre1"
description = ""
authors = ["Stephen McGinty <stephen.f.mcginty@gmail.com>"]

[tool.poetry.dependencies]
# This MUST be uncommented before the final build, though the build/release scripts will take care of that.
# It must be left out during development so that the example app picks up the local version of the pyapi instead.
origen_pyapi = "2.0.0-pre0"
python = "^3.6"
termcolor = ">= 1.1.0"
pyreadline = { version = "^2.1",  platform = "win32" }
colorama = "^0.4"
bs4 = "0.0.1"
beautifulsoup4 = "4.8.2"
lxml = "4.4.2"
mako = "1.1.0"
yapf = "0.30"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
