[tool.poetry]
name = "origen"
version = "2.0.0.dev5"
description = "Semiconductor Developer's Kit"
homepage = "https://origen-sdk.org/o2"
license = "MIT"
readme = "README.md"
authors = ["Origen-SDK"]
include = [
    "_origen.pyd",
    "_origen.so",
    "origen/__bin__/bin/origen.exe",
    "origen/__bin__/bin/origen",
]

[tool.poetry.build]
script = "poetry_build.py"
generate-setup-file = false

[tool.poetry.scripts]
o2 = 'origen.__bin__:run_origen'

[tool.poetry.dependencies]
python =  ">=3.6,<3.9"
termcolor = ">= 1.1.0"
pyreadline = { version = "^2.1",  platform = "win32" }
colorama = "^0.4"
bs4 = "0.0.1"
beautifulsoup4 = "4.8.2"
lxml = "4.4.2"
mako = "1.1.0"
sphinx = "3.0.2"
origen_autoapi = "2.0.1"
recommonmark = ">= 0"
sphinxbootstrap4theme = ">= 0"
yapf = "0.30"
poetry = "1.1.6"
Jinja2 = "^2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
