[tool.poetry]
name = "origen"
version = "2.0.0.dev8"
description = "Semiconductor Developer's Kit"
homepage = "https://origen-sdk.org/o2"
license = "MIT"
readme = "README.md"
authors = ["Origen-SDK"]
include = [
    "_origen.pyd",
    "_origen.so",
    "origen/__bin__/bin/origen.exe",
    "origen/__bin__/bin/origen",
]

[tool.poetry.build]
script = "poetry_build.py"
generate-setup-file = false

[tool.poetry.scripts]
origen = 'origen.__bin__:run_origen'

[tool.poetry.dependencies]
python = ">=3.7.0,<3.13"
origen_metal = "~1.0.0"
termcolor = "^1.1.0"
colorama = "^0.4"
bs4 = "0.0.1"
beautifulsoup4 = "^4.8.2"
mako = "^1.1.0"
sphinx = "^3.0.2,<6.0"
origen_autoapi = "^2.0.1"
recommonmark = "^0.7.0"
sphinxbootstrap4theme = "^0.6.0"
yapf = "^0.30"
poetry = "^1.1.14"
Jinja2 = "^3.0"
importlib-metadata = "^1.7.0"

[tool.poetry.dev-dependencies]
origen_metal = { path = "../origen_metal", develop = true }

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
