[tool.poetry]
name = "origen_metal"
version = "0.4.1.dev2"
description = "Bare metal APIs for the Origen SDK"
homepage = "https://origen-sdk.org/o2"
license = "MIT"
readme = "README.md"
authors = ["Origen-SDK"]
include = [
    "origen_metal/_origen_metal.pyd", # Windows
    "origen_metal/_origen_metal.so", # Linux
]

[tool.poetry.dependencies]
python = ">=3.7.0,<3.13"
pyreadline3 = { version="^3.3", platform="win32" }
termcolor = ">= 1.1.0"
colorama = ">= 0.4.4" # Note: colorama is usually installed on the system already, but it isn't actually required (e.g. WSL won't have this by default)
importlib-metadata = ">= 6.7.0" # For use with Python pre-3.8

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pdoc = "^7"
maturin = "1.7.0"

[tool.pytest.ini_options]
addopts = "--strict-markers"

# Use '-m "not <mark>"' on the command line to bypass these tests
markers = [
    "online: marks tests as requiring an internet connection",
    "ldap: marks tests requiring/using the external ldap",
]

[tool.poetry.build]
script = "poetry_build.py"
generate-setup-file = false

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
