[package]
name = "origen"
version = "2.0.0-pre1"
authors = ["Stephen McGinty <stephen.f.mcginty@gmail.com>"]
license = "MIT"
edition = "2018"
#exclude = []
build = "build.rs"

[workspace]
members = ["cli", "meta"]

[lib]

[dependencies]
lazy_static = "1.4.0"
walkdir = "2"
pathdiff = "0.1"
regex = "1"
semver = "0.9.0"
termcolor = "1"
config = "0.9"
serde = {version = "1.0", features = ["derive"]}
path-clean = "0.1.0"
time = "0.1.42"
indexmap = { version = "1.3.0", features = ["serde-1"] }
eval = "0.4.3"
cargo-expand = "0.4.17"
num-traits = "0.2.0"
serde-pickle = "0.6"
pest = "2.1"
pest_derive = "2.1"
enum-utils = "0.1.2"
shellexpand = "1.1.1"
# Need to be careful with this version, couldn't build on RHEL6 with versions greater
# than this. Can probably drop this constraint once NXP transitions to RHEL7.
git2 = "0.8"
rpassword = "4.0"
num-bigint = {version = "0.2.6", features = ["serde"]}
# Enabling this feature stops the CLI from depending on libpython. PYO3 is only included
# in origen to enable conversion of an Origen error to a PyErr.
pyo3 = {version = "0.11.1", features = ["extension-module", "num-bigint"]}
chrono = "0.4.11"
# Per this SO thread: https://stackoverflow.com/questions/37296351/trait-for-numeric-functionality-in-rust
# the num crate includes some useful traits to accept float-like and integer-like things without having to manually enumerate them all.
num = "0.2.0"
meta = { path = "./meta" }
whoami = "0.8"
keyring = {version = "0.8", optional = true}
dirs = "2.0"
tempfile = "3"
toml = "0.5"
path-slash = "0.1.2"

[build-dependencies]
built = "0.4"

# Additional items required to build a full self-contained origen CLI binary for Linux
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = []
password-cache = ["keyring"]
