[package]
name = "origen"
version = "2.0.0-dev.5"
authors = ["Origen-SDK"]
license = "MIT"
edition = "2021"
#exclude = []
build = "build.rs"
description = "Backend implementation for the full Origen SDK"
readme = "README.md"
homepage = "https://origen-sdk.org/o2/"
repository = "https://github.com/Origen-SDK/o2"
keywords = ["Product-Test-Eng", "Semiconductors", "SDKs"]
categories = ["embedded", "science"]

[workspace]
members = ["cli", "origen-core-support"]

[lib]

[dependencies]
origen_metal = { path = "../origen_metal" }
lazy_static = "1.4.0"
walkdir = "2"
pathdiff = "0.1"
regex = "1"
semver = "1.0.1"
termcolor = "1"
serde = {version = "1.0", features = ["derive"]}
path-clean = "0.1.0"
time = "0.1.42"
indexmap = { version = "1.6.0", features = ["serde-1"] }
eval = "0.4.3"
cargo-expand = "0.4.17"
# Per this SO thread: https://stackoverflow.com/questions/37296351/trait-for-numeric-functionality-in-rust
# the num crate includes some useful traits to accept float-like and integer-like things without having to manually enumerate them all.
num = "0.3.0"
num-traits = "0.2.12"
serde-pickle = "0.6"
enum-utils = "0.1.2"
shellexpand = "1.1.1"
# Need to be careful with this version, couldn't build on RHEL6 with versions greater
# than this. Can probably drop this constraint once NXP transitions to RHEL7.
git2 = "0.13"
num-bigint = {version = "0.4.0", features = ["serde"]}
# Enabling this feature stops the CLI from depending on libpython. PYO3 is only included
# in origen to enable conversion of an Origen error to a PyErr.
pyo3 = {version = "0.16.5", features = ["extension-module", "auto-initialize"]}
chrono = "0.4.11"
origen-core-support = { version = "0.1.0-dev.1", path = "./origen-core-support" }
whoami = "0.8" # TODO
dirs = "2.0"
tempfile = "3"
toml = "0.5"
path-slash = "0.1.2"
phf = { version = "0.8.0", features = ["macros"] }
serde_json = "1.0"
tera = "1"
strum_macros = "0.20"
strum = { version = "0.20", features = ["derive"] }
md-5 = "0.9"
normpath = "0.2.0"
cfg-if = "1"
dialoguer = "0.8.0"
wait-timeout = "0.2.0"
octocrab = "0.9.1"
futures = {version = "0.3.15", features = ["executor"]}
tokio = {version = "1.7", features = ["full"] }
reqwest = {version = "0.11.3", features = ["blocking", "json"]}

[build-dependencies]
built = "0.5.1"
walkdir = "2"

# Additional items required to build a full self-contained origen CLI binary for Linux
[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = []
