[package]
name = "origen_metal"
version = "0.4.0"
authors = ["Origen-SDK"]
license = "MIT"
edition = "2018"
description = "Bare metal APIs for the Origen SDK"
homepage = "https://origen-sdk.org/metal"
repository = "https://github.com/Origen-SDK/origen_metal"
keywords = ["Product-Test-Eng", "Semiconductors", "SDKs"]
categories = ["embedded", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
time = "0.1"
termcolor = "1"
regex = "1"
tempfile = "3"
pyo3 = {version = "0.14.4", features = ["extension-module"]}
serde = {version = "1.0", features = ["derive"]}
toml = "0.5"
git2 = "0.13"
dirs = "2.0"
wait-timeout = "0.2.0"
chrono = "0.4.11"
serde-pickle = "0.6"
enum-utils = "0.1.2"
pest = "2.1"
pest_derive = "2.1"
shellexpand = "1.1.1"
keyring = "0.10.1"
num-bigint = {version = "0.4.0", features = ["serde"]}
serde_json = "1.0"
octocrab = "0.9.1"
reqwest = {version = "0.11.3", features = ["blocking", "json"]}
ldap3 = "0.8.1"
config = "0.9"
lettre = {version = "=0.10.0-alpha.4", features = ["builder"]}
aes-gcm = "0.8"
semver = "1.0.1"

[build-dependencies]
built = "0.5.1"
