[package]
name = "origen_metal"
version = "0.4.0"
authors = ["Origen-SDK"]
license = "MIT"
# edition = "2018"
edition = "2021"
description = "Bare metal APIs for the Origen SDK"
homepage = "https://origen-sdk.org/metal"
repository = "https://github.com/Origen-SDK/origen_metal"
keywords = ["Product-Test-Eng", "Semiconductors", "SDKs"]
categories = ["embedded", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
time = "0.1"
termcolor = "1"
regex = "1"
tempfile = "3"
pyo3 = {version = "0.14.4", features = ["extension-module"]}
serde = {version = "1.0", features = ["derive"]}
toml = "0.5"
git2 = "0.13"
dirs = "2.0"
wait-timeout = "0.2.0"
chrono = "0.4.11"
indexmap = { version = "1.6.0", features = ["serde-1"] }
num-bigint = {version = "0.4.0", features = ["serde"]}
config = "0.11"
ldap3 = "0.9.3"
cfg-if = "1"
enum-display-derive = "0.1.1"
whoami = "1.2.1"
keyring = "0.10.1"
rpassword = "5.0.1"
aes-gcm = "0.8"
rand = "0.8"

[patch.crates-io]
keyring = { git = "https://github.com/hwchen/keyring-rs.git", rev = "a30e65f" }

[build-dependencies]
built = "0.5.1"
