[package]
name = "origen_metal"
version = "0.5.0"
authors = ["Origen-SDK"]
license = "MIT"
# edition = "2018"
edition = "2021"
description = "Bare metal APIs for the Origen SDK"
homepage = "https://origen-sdk.org/metal"
repository = "https://github.com/Origen-SDK/origen_metal"
keywords = ["Product-Test-Eng", "Semiconductors", "SDKs"]
categories = ["embedded", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
time = "0.1"
termcolor = "1"
regex = "1"
tempfile = "3"
pyo3 = {version = "0.19.1", features = ["extension-module"]}
serde = {version = "1.0", features = ["derive"]}
toml = "0.5"
git2 = "0.13"
dirs = "2.0"
wait-timeout = "0.2.0"
chrono = "0.4.11"
indexmap = { version = "1.6.0", features = ["serde-1"] }
config = "0.13.1"
ldap3 = "0.11.3"
cfg-if = "1"
enum-display-derive = "0.1.1"
whoami = "1.2.1"
rpassword = "5.0.1"
rand = "0.8"
serde-pickle = "0.6"
enum-utils = "0.1.2"
pest = "2.1"
pest_derive = "2.1"
shellexpand = "1.1.1"
keyring = "1"
num-bigint = {version = "0.4.0", features = ["serde"]}
num-traits = "0.2.15"
serde_json = "1.0"
octocrab = "0.28.0"
reqwest = {version = "0.11.3", features = ["blocking", "json"]}
lettre = {version = "=0.10.4", features = ["builder"]}
aes-gcm = "0.8"
semver = "1.0.1"
glob = "0.3.0"
email_address = "0.2.4"

[build-dependencies]
built = "0.5.2"
