[package]
name = "pyapi"
version = "0.0.0"  # Runtime version defined by top-level Cargo.toml
authors = ["Stephen McGinty <stephen.f.mcginty@gmail.com>"]
edition = "2018"

[lib]
name = "_origen"
path = "src/lib.rs"
#proc-macro = true
#cdylib = true
crate-type = ["cdylib"]

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
origen = { path = "../origen" }
num-bigint = "0.2"
num-traits = "0.2.0"
indexmap = "1.3.0"
itertools = "0.8.0"
#syn = "1.0.13"
#quote = "1.0.2"

[dependencies.pyo3]
version = "0.8.2"
features = ["extension-module", "num-bigint", "unsound-subclass"]
