[package]
name = "origen_pyapi"
version = "2.0.0-dev.5"
authors = ["Origen-SDK"]
edition = "2018"

[lib]
name = "_origen"
#proc-macro = true
#cdylib = true
crate-type = ["cdylib"]

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
origen = { path = "../origen" }
num-bigint = "0.4.0"
num-traits = "0.2.0"
num = "0.2.0"
indexmap = "1.3.0"
itertools = "0.8.0"
regex = "1"
#syn = "1.0.13"
#quote = "1.0.2"
#cargo-expand = "0.4.17"

# Statically links these libs to make the Python extension more portable
libz-sys = { version = "1.0.25", features = ["static"] }
curl-sys = { version = "0.4.34", features = ["static-curl"] }

[dependencies.pyo3]
version = "0.14.2"
features = ["extension-module", "num-bigint", "multiple-pymethods", "auto-initialize"]

[build-dependencies]
built = "0.5.1"