[package]
name = "origen_pyapi"
version = "2.0.0-dev.5"
authors = ["Origen-SDK"]
edition = "2018"

[lib]
name = "_origen"
#proc-macro = true
#cdylib = true
crate-type = ["cdylib"]

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
origen = { path = "../origen" }
origen_metal = { path = "../origen_metal" }
pyapi_metal = { path = "../pyapi_metal", package = "pyapi_metal" }
num-bigint = "0.4.0"
num-traits = "0.2.0"
num = "0.2.0"
indexmap = "1.3.0"
itertools = "0.8.0"
regex = "1"
#syn = "1.0.13"
#quote = "1.0.2"
#cargo-expand = "0.4.17"

# Statically links these libs to make the Python extension more portable
libz-sys = { version = "1.0.25", features = ["static"] }
curl-sys = { version = "0.4.34", features = ["static-curl"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.pyo3]
version = "0.14.4"
features = ["extension-module", "num-bigint", "multiple-pymethods", "auto-initialize"]

[build-dependencies]
built = "0.5.1"