[package]
name = "pyapi_metal"
version = "0.3.0"
edition = "2018"
authors = ["Origen-SDK"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "origen_metal"
crate-type = ["cdylib", "lib"]

[dependencies]
origen_metal = { path = "../origen_metal" }

# Statically links these libs to make the Python extension more portable
libz-sys = { version = "1.0.25", features = ["static"] }
curl-sys = { version = "0.4.34", features = ["static-curl"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.pyo3]
version = "0.14.4"
features = ["extension-module"]

[build-dependencies]
built = "0.5.1"

[package.metadata.maturin]
name = "origen_metal._origen_metal"
#requires-dist = ["black"]
