[tool.maturin]
module-name = "origen_metal._origen_metal"

# # This needs to be present to build for Linux, but does not work
# # for the current Windows build flow
# # This is currently added back in by the Linux Github actions job
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
