[tool.poetry]
name = "example"
version = "1.2.3"
description = ""
authors = ["Stephen McGinty <stephen.f.mcginty@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
origen = { path = "../../python", develop = true }
python_plugin = { path = "../python_plugin", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
