[tool.poetry]
name = "example"
version = "1.2.3"
description = ""
authors = ["Origen-SDK"]

[tool.poetry.dependencies]
python = ">=3.6,<3.11"
origen = { path = "../../python/origen", develop = true }
python_plugin = { path = "../python_plugin", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^6.0"
origen_metal = { path = "../../python/origen_metal", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
