[tool.poetry]
name = "example"
version = "1.2.3"
description = ""
authors = ["Origen-SDK"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
origen = "= 2.0.0.dev5"
python_plugin = { path = "../python_plugin", develop = true }
test_apps_shared_test_helpers = { path = "../test_apps_shared_test_helpers", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^6.0"
origen = { path = "../../python/origen", develop = true }
origen_metal = { path = "../../python/origen_metal", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers"

# Use '-m "not <mark>"' on the command line to bypass these tests
markers = [
    "online: marks tests as requiring an internet connection",
    "ldap: marks tests requiring/using the external ldap",
]
