[tool.poetry]
name = "test_apps_shared_test_helpers"
version = "0.1.1"
description = "Shared Regression Test Helpers for Test Apps"
authors = ["Origen-SDK"]

[tool.poetry.dependencies]
python = ">=3.7.0,<3.13"
# pytest 8.0.0 dropped support for Python 3.7
pytest = ">=7.2.1,<8.0.0"
pytest-rerunfailures = "13.0" # Last version that supports Python 3.7
origen = { path = "../../python/origen", develop = true }
pl_ext_cmds = { path = "../pl_ext_cmds", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
# poetry-core 2.0.0 dropped support for Python < 3.10
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"