[package]
name = "cli"
version = "2.0.0-dev.5"
authors = ["Origen-SDK"]
edition = "2018"
workspace = ".."

[[bin]]
name = "origen"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
origen = { path = ".." }
origen_metal = { path = "../../origen_metal" }
pathdiff = "0.1"
online = "0.2"
reqwest = "0.9"
time = "0.1.42"
semver = "0.9.0"
lazy_static = "1.4.0"
regex = "1"
toml = "0.5"
serde = {version = "1.0", features = ["derive"]}
tera = "1"
indexmap = {version = "1.3.0", features = ["serde-1"]}
flate2 = "1.0"
tempfile = "3"
tar = "0.4"
sha2 = "0.9"
base64-url = "1.4.6"
phf = { version = "0.8.0", features = ["macros"] }

[build-dependencies]
walkdir = "2"
built = "0.5.1"
