[package]
name = "pyapi"
version = "0.0.0"  # Runtime version defined by top-level Cargo.toml
authors = ["Stephen McGinty <stephen.f.mcginty@gmail.com>"]
edition = "2018"
workspace = ".."

[lib]
name = "_origen"
path = "src/lib.rs"
crate-type = ["cdylib"]

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
origen = { path = ".." }

[dependencies.pyo3]
version = "0.8.2"
features = ["extension-module"]
