[tool.poetry]
name = "{{ name }}"
version = "0.1.0"
description = "Origen Installation Test"
authors = ["Origen-SDK"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
{% if local_origen %}
origen = { path = "{{ o2_root }}/python/origen", develop = true }
origen_metal = { path = "{{ o2_root }}/python/origen_metal", develop = true }
{% else %}
origen = ">= 0.0.0"
origen_metal = ">= 0.0.0"
{% endif %}
{% if include_plugins %}
    {% if local_origen %}
pl_ext_cmds = { path = "{{ o2_root }}/test_apps/pl_ext_cmds", develop = true }
test_apps_shared_test_helpers = { path = "{{ o2_root }}/test_apps/test_apps_shared_test_helpers", develop = true }
    {% else %}
pl_ext_cmds = ">= 0.0.0"
test_apps_shared_test_helpers = ">= 0.0.0"
    {% endif %}
{% endif %}