[tool.poetry]
name = "TestUserInstall"
version = "0.1.0"
description = "Origen Installation Test"
authors = ["Origen-SDK"]

[tool.poetry.dependencies]
python = ">=3.7.0,<=3.12"

origen = { path = "../../../python/origen", develop = true }
origen_metal = { path = "../../../python/origen_metal", develop = true }
python_plugin = { path = "../../python_plugin", develop = true }
test_apps_shared_test_helpers = { path = "../../test_apps_shared_test_helpers", develop = true }
