[package]
name = "cli"
version = "0.0.0"  # Runtime version defined by libcore/Cargo.toml
authors = ["Stephen McGinty <stephen.f.mcginty@gmail.com>"]
edition = "2018"

[[bin]]
name = "origen"
path = "bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
core = { path = "../core" }
pathdiff = "0.1"
online = "0.2"
reqwest = "0.9"
time = "0.1.42"
