[package]
name = "core"
version = "2.0.0-pre0"
authors = ["Stephen McGinty <stephen.f.mcginty@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "core"
path = "lib.rs"
#crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
semver = "0.9.0"
regex = "1"
termcolor = "1"
config = "0.9"
serde = "1.0"
walkdir = "2"
path-clean = "0.1.0"
pathdiff = "0.1"

[dependencies.pyo3]
version = "0.8.2"
features = ["extension-module"]

[build-dependencies]
built = "0.3"
